// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ApiDetailsPage correctly with apiItem 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description="Provides a basic search api against the National API Directory of Norway"
          title="National API Directory Search API"
        />
        <HarvestDate
          harvest={
            Object {
              "changed": Array [
                "2018-12-21T09:27:29.577Z",
                "2019-01-07T16:53:37.588Z",
                "2019-01-07T16:54:19.940Z",
              ],
              "firstHarvested": "2018-12-19T09:52:51.883Z",
              "lastChanged": "2019-01-07T16:54:19.940Z",
              "lastHarvested": "2019-01-07T16:54:19.940Z",
            }
          }
        />
        <SearchHitHeader
          nationalComponent={false}
          publisher={
            Object {
              "id": "974760673",
              "name": "REGISTERENHETEN I BRØNNØYSUND",
              "orgPath": "/STAT/912660680/974760673",
              "prefLabel": Object {
                "no": "Brønnøysundregistrene",
              },
              "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
            }
          }
          publisherItems={null}
          publisherLabel="Provider:"
          publisherTag="span"
          tag="h1"
          theme={null}
          title="National API Directory Search API"
          titleLink={null}
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "National API Directory Search API",
                "prefLabel": "Description",
              },
              Object {
                "name": "Format",
                "prefLabel": "Format",
              },
              Object {
                "name": "Operations",
                "prefLabel": "Operations",
              },
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
              Object {
                "name": "Dataset references",
                "prefLabel": "Dataset references",
              },
              Object {
                "name": "Contact information",
                "prefLabel": "Contact information",
              },
            ]
          }
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3"
      >
        <withStateHandlers(ShowMorePure)
          showMoreButtonText="Show the full description"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Provides a basic search api against the National API Directory of Norway</p>",
              }
            }
          />
        </withStateHandlers(ShowMorePure)>
        <ListRegular
          bottomMargin={true}
          title="Format"
        >
          <div
            className="d-flex list-regular--item"
          >
            <span
              key="0"
            >
              application/json
            </span>
          </div>
        </ListRegular>
        <ApiEndpoints
          apiDocUrl={null}
          apiSpecUrl="https://raw.githubusercontent.com/brreg/openAPI/master/specs/api-cat.json"
          name="Operations"
          paths={
            Object {
              "/search": Object {
                "get": Object {
                  "description": "So far only simple queries is supported",
                  "summary": "Queries the api catalog for api specifications",
                },
              },
              "/{id}": Object {
                "get": Object {
                  "summary": "Get a specific api",
                },
              },
            }
          }
        />
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
          <TwoColRow
            col1="License"
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
          <TwoColRow
            col1="Price"
            col2="Gratis"
          />
        </ListRegular>
        <ListRegular
          bottomMargin={true}
          title="Contact information"
        >
          <React.Fragment
            key="https://fellesdatakatalog.brreg.no"
          >
            <TwoColRow
              col1="Contact point"
              col2={
                <a
                  href="https://fellesdatakatalog.brreg.no"
                >
                  Brønnøysundregistrene
                  <i
                    className="fa fa-external-link fdk-fa-right"
                  />
                </a>
              }
            />
            <TwoColRow
              col1="Email"
              col2={
                <a
                  href="mailto:fellesdatakatalog@brreg.no"
                  rel="noopener noreferrer"
                  title="fellesdatakatalog@brreg.no"
                >
                  fellesdatakatalog@brreg.no
                </a>
              }
            />
          </React.Fragment>
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with missing api-properties 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description={null}
          title={null}
        />
        <HarvestDate
          harvest={null}
        />
        <SearchHitHeader
          nationalComponent={false}
          publisher={null}
          publisherItems={null}
          publisherLabel="Provider:"
          publisherTag="span"
          tag="h1"
          theme={null}
          title={null}
          titleLink={null}
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
            ]
          }
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3"
      >
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
          <TwoColRow
            col1="License"
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
          />
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with no apiItem 1`] = `""`;
